Local changes before sync

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -29,7 +29,7 @@ linter:
 # https://dart.dev/guides/language/analysis-options
 
 
-analyzer:
-  exclude:
-    - lib/custom_code/**
-    - lib/flutter_flow/custom_functions.dart
+# analyzer:
+#   exclude:
+#     - lib/custom_code/**
+#     - lib/flutter_flow/custom_functions.dart
