--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,19 +28,28 @@ dependencies:
   auto_size_text: 3.0.0
   cached_network_image: 3.3.1
   collection: 1.18.0
+  file_picker: 8.0.3
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.3.1
+  flutter_plugin_android_lifecycle: 2.0.20
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 12.1.3
   google_fonts: 6.1.0
+  image_picker: 1.0.4
+  image_picker_android: 0.8.8
+  image_picker_for_web: 3.0.1
+  image_picker_ios: 0.8.8+2
+  image_picker_platform_interface: 2.9.1
   intl: 0.19.0
   json_path: 0.7.2
+  mime_type: 1.0.0
   page_transition: 2.1.0
   path_provider: 2.1.3
   path_provider_android: 2.2.5
   path_provider_foundation: 2.4.0
   path_provider_platform_interface: 2.1.2
+  plugin_platform_interface: 2.1.8
   provider: 6.1.2
   shared_preferences: 2.2.2
   shared_preferences_android: 2.2.1
@@ -54,6 +63,11 @@ dependencies:
   url_launcher_android: 6.3.0
   url_launcher_ios: 6.2.5
   url_launcher_platform_interface: 2.3.2
+  video_player: 2.8.6
+  video_player_android: 2.4.16
+  video_player_avfoundation: 2.6.1
+  video_player_platform_interface: 6.2.2
+  video_player_web: 2.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -63,6 +77,7 @@ dependencies:
 dependency_overrides:
   http: 1.2.1
   uuid: ^4.0.0
+  win32: 5.5.1
 
 dev_dependencies:
   flutter_lints: 4.0.0
