--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ dependencies:
   cached_network_image: 3.3.1
   collection: 1.18.0
   file_picker: 8.0.3
+  firebase_core: 2.31.0
+  firebase_core_platform_interface: 5.0.0
+  firebase_core_web: 2.17.0
+  firebase_performance: 0.9.4+5
+  firebase_performance_platform_interface: 0.1.4+33
+  firebase_performance_web: 0.1.6+5
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.3.1
   flutter_plugin_android_lifecycle: 2.0.20
