--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,18 @@ dependencies:
   cached_network_image: 3.3.1
   collection: 1.18.0
   file_picker: 8.0.3
+  firebase_auth: 4.19.5
+  firebase_auth_platform_interface: 7.2.6
+  firebase_auth_web: 5.11.5
   firebase_core: 2.31.0
   firebase_core_platform_interface: 5.0.0
   firebase_core_web: 2.17.0
   firebase_performance: 0.9.4+5
   firebase_performance_platform_interface: 0.1.4+33
   firebase_performance_web: 0.1.6+5
+  firebase_storage: 11.7.5
+  firebase_storage_platform_interface: 5.1.20
+  firebase_storage_web: 3.9.5
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.3.1
   flutter_plugin_android_lifecycle: 2.0.20
@@ -42,6 +48,11 @@ dependencies:
   from_css_color: 2.0.0
   go_router: 12.1.3
   google_fonts: 6.1.0
+  google_sign_in: 6.1.5
+  google_sign_in_android: 6.1.20
+  google_sign_in_ios: 5.6.4
+  google_sign_in_platform_interface: 2.4.2
+  google_sign_in_web: 0.12.1
   image_picker: 1.0.4
   image_picker_android: 0.8.8
   image_picker_for_web: 3.0.1
@@ -57,11 +68,15 @@ dependencies:
   path_provider_platform_interface: 2.1.2
   plugin_platform_interface: 2.1.8
   provider: 6.1.2
+  rxdart: 0.27.7
   shared_preferences: 2.2.2
   shared_preferences_android: 2.2.1
   shared_preferences_foundation: 2.3.4
   shared_preferences_platform_interface: 2.3.1
   shared_preferences_web: 2.2.1
+  sign_in_with_apple: 4.3.0
+  sign_in_with_apple_platform_interface: 1.0.0
+  sign_in_with_apple_web: 1.0.1
   sqflite: 2.2.6
   super_drag_and_drop: ^0.8.17
   timeago: 3.6.1
