Updating to latest FlutterFlow output.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
     sdk: flutter
   auto_size_text: 3.0.0
   cached_network_image: 3.3.1
+  cloud_firestore: 4.17.3
+  cloud_firestore_platform_interface: 6.2.3
+  cloud_firestore_web: 3.12.3
   collection: 1.18.0
   file_picker: 8.0.3
   firebase_auth: 4.19.5
@@ -78,6 +81,7 @@ dependencies:
   sign_in_with_apple_platform_interface: 1.0.0
   sign_in_with_apple_web: 1.0.1
   sqflite: 2.2.6
+  stream_transform: 2.1.0
   super_drag_and_drop: ^0.8.17
   timeago: 3.6.1
   url_launcher: 6.2.5
