--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,11 +51,18 @@ dependencies:
   from_css_color: 2.0.0
   go_router: 12.1.3
   google_fonts: 6.1.0
-  google_sign_in: 6.1.5
-  google_sign_in_android: 6.1.20
-  google_sign_in_ios: 5.6.4
-  google_sign_in_platform_interface: 2.4.2
-  google_sign_in_web: 0.12.1
+  # LOCAL_START
+  # google_sign_in: 6.1.5
+  # google_sign_in_android: 6.1.20
+  # google_sign_in_ios: 5.6.4
+  # google_sign_in_platform_interface: 2.4.2
+  # google_sign_in_web: 0.12.1
+  google_sign_in: 6.2.1
+  google_sign_in_android: 6.1.27
+  google_sign_in_ios: 5.7.6
+  google_sign_in_platform_interface: 2.4.5
+  google_sign_in_web: 0.12.4+1
+  # LOCAL_END
   image_picker: 1.0.4
   image_picker_android: 0.8.8
   image_picker_for_web: 3.0.1
