--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -55,6 +55,10 @@
 
 
 
+    <key>UIBackgroundModes</key>
+    <array>
+        <string>audio</string>
+    </array>
 
 
 	<key>UILaunchStoryboardName</key>
