--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  assets_audio_player: 3.1.1
+  assets_audio_player_web: 3.1.1
   auto_size_text: 3.0.0
   cached_network_image: 3.3.1
   cloud_firestore: 4.17.3
