--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   path_provider_android: 2.2.5
   path_provider_foundation: 2.4.0
   path_provider_platform_interface: 2.1.2
+  percent_indicator: 4.2.2
   plugin_platform_interface: 2.1.8
   provider: 6.1.2
   rxdart: 0.27.7
