--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore_platform_interface: 6.2.3
   cloud_firestore_web: 3.12.3
   collection: 1.18.0
+  file_picker: 8.0.3
   firebase_auth: 4.19.5
   firebase_auth_platform_interface: 7.2.6
   firebase_auth_web: 5.11.5
@@ -40,9 +41,13 @@ dependencies:
   firebase_performance: 0.9.4+5
   firebase_performance_platform_interface: 0.1.4+33
   firebase_performance_web: 0.1.6+5
+  firebase_storage: 11.7.5
+  firebase_storage_platform_interface: 5.1.20
+  firebase_storage_web: 3.9.5
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.3.1
   flutter_markdown: 0.6.23
+  flutter_plugin_android_lifecycle: 2.0.20
   font_awesome_flutter: 10.6.0
   from_css_color: 2.0.0
   go_router: 12.1.3
@@ -52,8 +57,14 @@ dependencies:
   google_sign_in_ios: 5.6.4
   google_sign_in_platform_interface: 2.4.2
   google_sign_in_web: 0.12.1
+  image_picker: 1.0.4
+  image_picker_android: 0.8.8
+  image_picker_for_web: 3.0.1
+  image_picker_ios: 0.8.8+2
+  image_picker_platform_interface: 2.9.1
   intl: 0.19.0
   json_path: 0.7.2
+  mime_type: 1.0.0
   page_transition: 2.1.0
   path_provider: 2.1.3
   path_provider_android: 2.2.5
@@ -79,6 +90,11 @@ dependencies:
   url_launcher_android: 6.3.0
   url_launcher_ios: 6.2.5
   url_launcher_platform_interface: 2.3.2
+  video_player: 2.8.6
+  video_player_android: 2.4.16
+  video_player_avfoundation: 2.6.1
+  video_player_platform_interface: 6.2.2
+  video_player_web: 2.3.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -88,6 +104,7 @@ dependencies:
 dependency_overrides:
   http: 1.2.1
   uuid: ^4.0.0
+  win32: 5.5.1
 
 dev_dependencies:
   flutter_lints: 4.0.0
